# mortgageRateAnalysis

./: .gitignore  Dockerfile.lambda  README.md  alembic.ini  docker-compose.yml  lenders.yaml  pyproject.toml
infra/: README.md  ecr.tf  eventbridge.tf  grafana.tf  lambda.tf  outputs.tf  rds.tf  secrets.tf  variables.tf
infra/grafana/dashboards/: mortgage_rates.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: postgres.yaml
infra/templates/: grafana_user_data.sh.tpl
scripts/: invoke_local.py
src/mortgage_rates/: cli.py  config.py  handler.py  lenders_config.py  models.py  normalize.py  pipeline.py
src/mortgage_rates/adapters/: afcu.py  base.py  goldenwest.py  granite.py  html_table.py  macu.py  ranlife.py  rocket.py  sofi.py  usucu.py  utahfirst.py  zions.py
src/mortgage_rates/db/: engine.py  repository.py  schema.py
src/mortgage_rates/db/migrations/: env.py
src/mortgage_rates/db/migrations/versions/: 5fb7ac3b159e_initial_schema.py
tests/: test_pipeline_idempotency.py
tests/adapters/: test_granite.py  test_html_table_adapters.py  test_ranlife.py  test_rocket.py  test_sofi.py
tests/adapters/fixtures/: afcu_rates.html  goldenwest_rates.html  granite_rates.html  macu_rates.html  ranlife_rates.html  rocket_rates.html  sofi_rates.html  usucu_rates.html  utahfirst_rates.html  zions_rates.html
