[project]
name = "mortgage-rates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benjamin Belnap", email = "ben.belnap21@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "selectolax>=0.3.21",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "typer>=0.15",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "respx>=0.22",
]

[project.scripts]
mortgage-rates = "mortgage_rates.cli:app"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
